WIP Phrase Manager and Core implementation
Uploading WIP implementation for discussion

--- a/SchedulerTask/SchedulerTask.csproj
+++ b/SchedulerTask/SchedulerTask.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core.cs" />
+    <Compile Include="PhraseManager.cs" />
     <Compile Include="Tasks.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
