--- a/HelloWorld/packages/repositories.config
+++ b/HelloWorld/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../HelloWorld.UITests/packages.config" />
   <repository path="..\HelloWorld.UITests\packages.config" />
 </repositories>
