--- a/nUnitTestSchedulerApp/nUnitTestSchedulerApp.test.csproj
+++ b/nUnitTestSchedulerApp/nUnitTestSchedulerApp.test.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -39,11 +39,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\SchedulerTask\SchedulerTask.csproj">
-      <Project>{CBC671AE-E6CF-44D9-9CA9-45E2579CD8C8}</Project>
-      <Name>SchedulerTask</Name>
+    <ProjectReference Include="..\SchedulerApp\SchedulerApp.csproj">
+      <Project>{cbc671ae-e6cf-44d9-9ca9-45e2579cd8c8}</Project>
+      <Name>SchedulerApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
