--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@
 *.user
 *.sln.docstates
 
+# Ignore NuGet Packages
+*.nupkg
+# Ignore the packages folder
+**/packages/*
+# except build/, which is used as an MSBuild target.
+!**/packages/build/
+# Uncomment if necessary however generally it will be regenerated when needed
+#!**/packages/repositories.config
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
