--- a/nUnitTestSchedulerApp/nUnitTestSchedulerApp.test.csproj
+++ b/nUnitTestSchedulerApp/nUnitTestSchedulerApp.test.csproj
@@ -28,22 +28,23 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\ScheduleApp\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestSchedule.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\ScheduleApp\ScheduleApp\ScheduleApp\ScheduleApp.csproj">
+      <Project>{ecd9fd22-6892-41d9-ac21-81022bf7cd60}</Project>
+      <Name>ScheduleApp</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SchedulerApp\SchedulerApp.csproj">
-      <Project>{cbc671ae-e6cf-44d9-9ca9-45e2579cd8c8}</Project>
-      <Name>SchedulerApp</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
