--- a/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Core.cs" />
     <Compile Include="PhraseManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scheduler.cs" />
     <Compile Include="Tasks.cs" />
   </ItemGroup>
   <ItemGroup>
