--- a/nUnitTestSchedulerApp/nUnitTestSchedulerApp.test.csproj
+++ b/nUnitTestSchedulerApp/nUnitTestSchedulerApp.test.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestSchedule.cs" />
