--- a/ScheduleApp/ScheduleApp/ScheduleApp.Droid/ScheduleApp.Droid.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp.Droid/ScheduleApp.Droid.csproj
@@ -81,6 +81,7 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\Layout\AddTask.axml" />
+    <AndroidResource Include="Resources\Layout\Main.axml" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
@@ -88,7 +89,6 @@
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
     <AndroidResource Include="Resources\Layout\TaskViewer.axml" />
-    <AndroidResource Include="Resources\Layout\MainPage.axml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
