Initial commit of application configuration class

--- a/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="AppConfig.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="PhraseManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
