--- a/ScheduleApp/ScheduleApp/ScheduleApp.Droid/packages.config
+++ b/ScheduleApp/ScheduleApp/ScheduleApp.Droid/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid44" />
   <package id="Xamarin.Android.Support.v4" version="22.2.1.0" targetFramework="monoandroid44" />
-  <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="monoandroid23" />
+  <package id="Xamarin.Forms" version="1.5.0.6446" targetFramework="MonoAndroid44" />
 </packages>
