--- a/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
@@ -41,6 +41,7 @@
     <Compile Include="PhraseManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scheduler.cs" />
+    <Compile Include="Services\NotificationService.cs" />
     <Compile Include="Tasks.cs" />
     <Compile Include="Views\pageAppConfig.cs" />
     <Compile Include="Views\pageAddTask.cs" />
