--- a/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="AppConfig.cs" />
+    <Compile Include="Utility.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="PhraseManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,6 +72,12 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Ringtones\Crazy Frog.midi" />
+    <Content Include="Ringtones\Flight Of Valkyrie.midi" />
+    <Content Include="Ringtones\Minions.midi" />
+    <Content Include="Ringtones\Old Spice.midi" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.5.0.6446\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -80,7 +87,6 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup />
   <Import Project="..\..\packages\Xamarin.Forms.1.5.0.6447\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.5.0.6447\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
