Connected pageAddTask with the Ringtone Interface, also was able to loop GetRingTones to local Android media folder and return the ringtone names

--- a/ScheduleApp/ScheduleApp/ScheduleApp.Droid/ScheduleApp.Droid.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp.Droid/ScheduleApp.Droid.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LocalRingTones.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Notifications.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
