worked on ringtones, still cannot play it from our app

--- a/ScheduleApp/ScheduleApp/ScheduleApp.Droid/ScheduleApp.Droid.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp.Droid/ScheduleApp.Droid.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
+    <Content Include="Resources\Raw\ding_persevy.wav" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScheduleApp\ScheduleApp.csproj">
