-Renamed pageAddTask to pageTask -Updated pageTask to allow for editing of existing tasks and added a Delete button/option that appears for existing tasks -Removed assorted comment blocks -Updated Scheduler's UpdateTaskWithInfo to accept a reminder begin date

--- a/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
+++ b/ScheduleApp/ScheduleApp/ScheduleApp/ScheduleApp.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Services\NotificationService.cs" />
     <Compile Include="Tasks.cs" />
     <Compile Include="Views\pageAppConfig.cs" />
-    <Compile Include="Views\pageAddTask.cs" />
+    <Compile Include="Views\pageTask.cs" />
     <Compile Include="Views\pageMain.cs" />
     <Compile Include="Views\pageViewTask.cs" />
   </ItemGroup>
